src/mongo/db/pipeline/process_interface_standalone.cpp
@@ -85,6 +85,10 @@ public:
 
         Session* const session = OperationContextSession::get(opCtx);
         if (session) {
+            if (auto txnParticipant = TransactionParticipant::get(opCtx)) {
+                txnParticipant.stashTransactionResources(opCtx);
+            }
+
             MongoDOperationContextSession::checkIn(opCtx);
         }
         _yielded = (session != nullptr);
@@ -97,13 +101,14 @@ public:
             // unblocking this thread of execution. However, we must wait until the child operation
             // on this shard finishes so we can get the session back. This may limit the throughput
             // of the operation, but it's correct.
-            MongoDOperationContextSession::checkOut(opCtx,
-                                                    // Assumes this is only called from the
-                                                    // 'aggregate' or 'getMore' commands.  The code
-                                                    // which relies on this parameter does not
-                                                    // distinguish/care about the difference so we
-                                                    // simply always pass 'aggregate'.
-                                                    "aggregate");
+            MongoDOperationContextSession::checkOut(opCtx);
+
+            if (auto txnParticipant = TransactionParticipant::get(opCtx)) {
+                // Assumes this is only called from the 'aggregate' or 'getMore' commands.  The code
+                // which relies on this parameter does not distinguish/care about the difference so
+                // we simply always pass 'aggregate'.
+                txnParticipant.unstashTransactionResources(opCtx, "aggregate");
+            }
         }
     }
 
