src/mongo/db/session_catalog_mongod.cpp
@@ -408,19 +408,13 @@ MongoDOperationContextSession::MongoDOperationContextSession(OperationContext* o
 MongoDOperationContextSession::~MongoDOperationContextSession() = default;
 
 void MongoDOperationContextSession::checkIn(OperationContext* opCtx) {
-    if (auto txnParticipant = TransactionParticipant::get(opCtx)) {
-        txnParticipant.stashTransactionResources(opCtx);
-    }
-
     OperationContextSession::checkIn(opCtx);
 }
 
-void MongoDOperationContextSession::checkOut(OperationContext* opCtx, const std::string& cmdName) {
+void MongoDOperationContextSession::checkOut(OperationContext* opCtx) {
     OperationContextSession::checkOut(opCtx);
-
-    if (auto txnParticipant = TransactionParticipant::get(opCtx)) {
-        txnParticipant.unstashTransactionResources(opCtx, cmdName);
-    }
+    auto txnParticipant = TransactionParticipant::get(opCtx);
+    txnParticipant.refreshFromStorageIfNeeded(opCtx);
 }
 
 MongoDOperationContextSessionWithoutRefresh::MongoDOperationContextSessionWithoutRefresh(
