src/mongo/db/transaction_participant_test.cpp
@@ -743,6 +743,7 @@ TEST_F(TxnParticipantTest, KillOpBeforeCommittingPreparedTransaction) {
     }
 
     // Check the session back in.
+    txnParticipant.stashTransactionResources(opCtx());
     sessionCheckout->checkIn(opCtx());
 
     // The transaction state should have been unaffected.
@@ -783,6 +784,7 @@ TEST_F(TxnParticipantTest, KillOpBeforeAbortingPreparedTransaction) {
     }
 
     // Check the session back in.
+    txnParticipant.stashTransactionResources(opCtx());
     sessionCheckout->checkIn(opCtx());
 
     // The transaction state should have been unaffected.
